# tricast

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/: calibration.json
pages/: 1_Stock_Detail.py  2_Macro_Regime.py  3_Prediction_Ledger.py
scripts/: analyze_watchlist.py  backtest.py  calibrate.py  judge.py  run_analysis.py  score_predictions.py
stock_scenarios/: config.py  ledger.py  macro_regime.py  pipeline.py  store.py  ui.py
stock_scenarios/data/: macro.py  market.py
stock_scenarios/llm/: analyst.py  schemas.py
stock_scenarios/quant/: montecarlo.py  scenarios.py
tests/: test_backtest.py  test_bulk.py  test_calibration.py  test_judge.py  test_ledger.py  test_llm_validation.py  test_macro_regime.py  test_montecarlo.py  test_risk.py  test_scenarios.py
tricast/: backtest.py  bulk.py  calibration.py  config.py  judge.py  ledger.py  macro_regime.py  pipeline.py  risk.py  store.py  ui.py
tricast/data/: macro.py  market.py
tricast/llm/: analyst.py  client.py
tricast/quant/: montecarlo.py  scenarios.py
