[project]
name = "tricast"
version = "0.1.0"
description = "Bull/base/bear stock scenarios with probabilities: Monte Carlo + macro regime + LLM analysis"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "plotly>=5.24",
    "yfinance>=0.2.50",
    "fredapi>=0.5.2",
    "pandas>=2.2",
    "numpy>=2.0",
    "anthropic>=0.69",
    "requests>=2.31",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tricast*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
